# AeroSAR-Autonomous-Search-and-Rescue-Drone

./: .gitignore  .gitmodules  README.md  Roadmap.md  fastdds_profiles.xml  sim.md
.devcontainer/: devcontainer.json
docker/: .docker-compose.yml.swp  Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/evaluator/share/evaluator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/geolocation/share/geolocation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mapping/share/mapping/: package.ps1  package.sh  package.xml
install/mission_manager/share/mission_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/msgs/share/msgs/: local_setup.bash  local_setup.dsv  (+6 more)
log/: latest_build
sim/: README.md
src/1_interfaces/msgs/: package.xml
src/2_control/mission_manager/: package.xml  setup.cfg  setup.py
src/2_control/px4_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/2_control/px4_interface/px4_interface/: offboard_hover_node.py  waypoint_sequencer.py
src/3_autonomy/mapping/: setup.py
src/3_autonomy/planner/: package.xml  setup.py
src/4_perception/geolocation/: setup.cfg  setup.py
src/4_perception/perception/: package.xml  setup.py
src/5_output/evaluator/: setup.py
src/5_output/reporting/: setup.cfg  setup.py
(+45 files in other folders)
