<?xml version="1.0"?>
<package format="3">
  <name>px4_interface</name>
  <version>0.0.0</version>
  <description>PX4 offboard interface for AeroSAR</description>
  <maintainer email="aerosar@example.com">aerosar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>