<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_interface</name>
  <version>0.0.0</version>
  <description>General Mission Manager</description>
  <maintainer email="jdamayac@outlook.com">Juan Amaya</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>